--- a/res/values/velvet_attrs.xml
+++ b/res/values/velvet_attrs.xml
@@ -14,4 +14,11 @@
         <attr name="defaultColorValue" format="integer" />
     </declare-styleable>
 
+    <declare-styleable name="IntervalSeekBar">
+        <attr name="minI" format="float" />
+        <attr name="maxI" format="float" />
+        <attr name="defaultValuePure" format="float" />
+        <attr name="digits" format="integer" />
+    </declare-styleable>
+
 </resources>
