Added modded marginov color picker
-- Adapt for Preference being part of support library

Change-Id: Ic721fdc7f63607d972d203e1a13097e8870bce2f

--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -129,4 +129,14 @@
     <string name="lockscreen_qs_disabled_title">Quick settings on lock screen</string>
     <string name="lockscreen_qs_disabled_summary">Disable quick settings tiles on secured lockscreen</string>
 
+    <!-- Color Picker -->
+    <string name="dialog_color_picker">Color Picker</string>
+    <string name="press_color_to_apply">Press on color below to apply</string>
+    <string name="arrow_right">→</string>
+    <string name="arrow_down">↓</string>
+    <string name="hex">Hex:</string>
+    <string name="hex_hint">#ff000000</string>
+    <string name="set">Set</string>
+    <string name="color_default">Default</string>
+
 </resources>
