--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -37,6 +37,14 @@
     <!-- Settings tile title -->
     <string name="customization_settings_title">Customization</string>
 
+    <!-- Section headers -->
+    <string name="navigationbar_section_header">Navigation bar</string>
+
+    <!-- Double Tap Navbar to Sleep -->
+    <string name="double_tap_sleep_nav_bar_title">Navigation bar</string>
+    <string name="double_tap_sleep_nav_bar_summary">Double tap navigation bar to put the device to sleep</string>
+
+<!-- Miscellaneous -->
     <!-- Volume button orientation based on current rotation -->
     <string name="swap_volume_buttons_title">Swap volume rocker orientation</string>
     <string name="swap_volume_buttons_summary">Adjust the rocker orientation based on current rotation</string>
