--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -4,4 +4,15 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/customization_settings_title" >
 
+    <!-- Navigation bar -->
+    <PreferenceCategory
+        android:key="navigationbar"
+        android:title="@string/navigationbar_section_header" >
+
+   	<com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_navbar"
+            android:title="@string/double_tap_sleep_nav_bar_title"
+            android:summary="@string/double_tap_sleep_nav_bar_summary"
+            android:defaultValue="false" />
+    </PreferenceCategory>
 </PreferenceScreen>
