--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -55,7 +55,7 @@
                 android:enabled="false"
                 android:shouldDisableView="false"
                 android:selectable="false"
-                android:title="@string/model_info"
+                android:title="@string/model_name"
                 android:summary="@string/device_info_default"
                 settings:allowDividerAbove="true"
                 settings:allowDividerBelow="true"/>
@@ -114,6 +114,13 @@
                 android:shouldDisableView="false"
                 android:title="@string/build_number"
                 android:summary="@string/device_info_default"/>
+
+        <!-- build date -->
+        <Preference android:key="build_date"
+                android:enabled="false"
+                android:shouldDisableView="false"
+                android:title="@string/build_date"
+                android:summary="@string/build_date_default" />
 
         <!-- SELinux status information -->
         <com.android.settings.DividerPreference
