Enable Development Settings By Default regardless of build type * also kill dev countdown + redo arleady enabled string
Change-Id: Idb51be71c2c748b94f6af927a06adc6f5dc22103

--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -15,6 +15,10 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+<!-- Development Settings -->
+    <!-- Dev Options Enabled by Default -->
+    <string name="show_dev_already_enabled">No Need, Development settings are enabled by default.</string>
+
 <!-- Device Info Settings -->
     <!-- Build date -->
     <string name="build_date">Build date</string>
