--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -47,4 +47,8 @@
     <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
     <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
 
+    <!-- Quick settings disable on lockscreen -->
+    <string name="block_on_secure_keyguard_title">Disable quick settings</string>
+    <string name="block_on_secure_keyguard_summary">On secure lockscreen</string>
+
 </resources>
