--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -92,6 +92,13 @@
             android:summaryOff="@string/notification_tint_summary_off"
             android:defaultValue="true" />
 
+        <com.android.settings.preference.SecureSettingSwitchPreference
+            android:key="doze_notification_invert_enabled"
+            android:title="@string/doze_notification_color_invert_title"
+            android:summaryOn="@string/doze_notification_color_invert_summary_on"
+            android:summaryOff="@string/doze_notification_color_invert_summary_off"
+            android:defaultValue="true" />
+
 		<PreferenceScreen
 	        android:key="power_notification_controls"
 	        android:title="@string/tuner_full_importance_settings" >
