Settings: double tap status bar to sleep (1/2)
Change-Id: I8da30246d6ab776aea64e696d1dd8d35b361c89f

Conflicts:
	res/values/chroma_strings.xml
	res/xml/chroma_settings_gestures.xml

--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -37,6 +37,14 @@
     <!-- Settings tile title -->
     <string name="customization_settings_title">Customization</string>
 
+    <!-- Section headers -->
+    <string name="statusbar_section_header">Status bar</string>
+
+    <!-- Double Tap Status Bar to Sleep -->
+    <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
+    <string name="double_tap_to_sleep_summary">Double-tap on the status bar or top third and bottom shortcut area of the lock screen to turn off the display</string>
+
+<!-- Miscellaneous -->
     <!-- Volume button orientation based on current rotation -->
     <string name="swap_volume_buttons_title">Swap volume rocker orientation</string>
     <string name="swap_volume_buttons_summary">Adjust the rocker orientation based on current rotation</string>
