--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -39,11 +39,15 @@
 
     <!-- Section headers -->
     <string name="navigationbar_section_header">Navigation bar</string>
+    <string name="statusbar_section_header">Status bar</string>
 
     <!-- Double Tap Navbar to Sleep -->
     <string name="double_tap_sleep_nav_bar_title">Navigation bar</string>
     <string name="double_tap_sleep_nav_bar_summary">Double tap navigation bar to put the device to sleep</string>
 
+    <!-- Double Tap Status Bar to Sleep -->
+    <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
+    <string name="double_tap_to_sleep_summary">Double-tap on the status bar or top third and bottom shortcut area of the lock screen to turn off the display</string>
 <!-- Miscellaneous -->
     <!-- Volume button orientation based on current rotation -->
     <string name="swap_volume_buttons_title">Swap volume rocker orientation</string>
