--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -4,6 +4,18 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/customization_settings_title" >
 
+    <!-- Status bar -->
+    <PreferenceCategory
+        android:key="statusbar"
+        android:title="@string/statusbar_section_header" >
+
+   	<com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_gesture"
+            android:title="@string/double_tap_to_sleep_title"
+            android:summary="@string/double_tap_to_sleep_summary"
+            android:defaultValue="false" />
+    </PreferenceCategory>
+
     <!-- Navigation bar -->
     <PreferenceCategory
         android:key="navigationbar"
