Velvet logo in About Phone
Conflicts:
	res/xml/device_info_settings.xml

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -18,6 +18,10 @@
         xmlns:settings="http://schemas.android.com/apk/res-auto"
         android:title="@string/about_settings">
 
+        <!-- Velvet Logo Header -->
+        <PreferenceScreen android:key="velvet_logo"
+                android:layout="@layout/about_logo_row" />
+
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
                 android:title="@string/device_status"
