--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -37,4 +37,8 @@
     <!-- Settings tile title -->
     <string name="customization_settings_title">Customization</string>
 
+    <!-- Volume button orientation based on current rotation -->
+    <string name="swap_volume_buttons_title">Swap volume rocker orientation</string>
+    <string name="swap_volume_buttons_summary">Adjust the rocker orientation based on current rotation</string>
+
 </resources>
