--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -138,4 +138,8 @@
     <!-- substratum dashboard tile title -->
     <string name="substratum_settings_title">Substratum</string>
 
+    <!-- fingerprint authentication vibration -->
+    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
+    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
+
 </resources>
