--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -339,4 +339,8 @@
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
 
+    <!-- fingerprint authentication vibration -->
+    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
+    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
+
 </resources>
