--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -89,6 +89,12 @@
         android:key="misc"
         android:title="@string/miscellaneous_section_header" >
 
+        <com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="fingerprint_success_vib"
+            android:title="@string/fprint_sucess_vib_title"
+            android:summary="@string/fprint_sucess_vib_summary"
+            android:defaultValue="true" />
+
 		<PreferenceScreen
 	        android:key="power_notification_controls"
 	        android:title="@string/tuner_full_importance_settings" >
