[2/2] Settings: SystemUI/notifications: add a separate charging vibration toggle
Signed-off-by: Jean-Pierre Rasquin <yank555.lu@gmail.com>

--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -69,4 +69,7 @@
     <string name="block_on_secure_keyguard_title">Disable quick settings</string>
     <string name="block_on_secure_keyguard_summary">On secure lockscreen</string>
 
+    <!-- Charging vibration -->
+    <string name="charging_vibration_title">Charging vibration</string>
+
 </resources>
