--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -19,6 +19,12 @@
                 android:targetClass="com.android.systemui.tuner.TunerActivity" />
         </PreferenceScreen>
 
+        <PreferenceScreen
+            android:fragment="com.android.settings.velvet.fragments.ClockSettings"
+            android:key="clock_settings"
+            android:title="@string/clock_settings_title"
+            android:summary="@string/clock_settings_summary" />
+
 		<PreferenceScreen
 		    android:key="status_bar_battery"
 		    android:title="@string/statusbar_battery_title"
