--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -20,6 +20,9 @@
     <string name="show_dev_already_enabled">No Need, Development settings are enabled by default.</string>
 
 <!-- Device Info Settings -->
+    <!-- Vendor version -->
+    <string name="vendor_version">Vendor version</string>
+    <string name="vendor_version_default">Unknown</string>
     <!-- Build date -->
     <string name="build_date">Build date</string>
     <string name="build_date_default">2014-01-01-0000</string>
