--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -33,4 +33,8 @@
    <!-- Phone info shortcut -->
     <string name="device_info_title">Phone info</string>
 
+<!-- Customization Settings -->
+    <!-- Settings tile title -->
+    <string name="customization_settings_title">Customization</string>
+
 </resources>
