Move original "SystemUI Tuner" options under Customization settings (2/2)
Credits to Alex Cruz (Mazda) & Dirty-Unicorns

I took some code from this commit:

Break SystemUI Tuner into two parts [2/2]
Change-Id: I7715b0377b9428e953817bade5268ed29c991d73
DirtyUnicorns/android_packages_apps_DU-Tweaks@9163cee

--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -41,6 +41,7 @@
     <!-- Section headers -->
     <string name="navigationbar_section_header">Navigation bar</string>
     <string name="statusbar_section_header">Status bar</string>
+    <string name="miscellaneous_section_header">Miscellaneous</string>
 
     <!-- Double Tap Navbar to Sleep -->
     <string name="double_tap_sleep_nav_bar_title">Navigation bar</string>
@@ -74,6 +75,13 @@
     <string name="network_traffic_autohide">Auto hide</string>
     <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
     <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
+
+    <!-- SystemUI Tuner Parts -->
+    <string name="systemui_tuner_statusbar_title">Status bar items</string>
+    <string name="systemui_tuner_statusbar_summary">Show/hide status bar items</string>
+    <string name="systemui_tuner_navbar_title">Navigation bar items</string>
+    <string name="systemui_tuner_navbar_summary">Edit navigation bar items</string>
+    <string name="systemui_tuner_other_title">System UI settings</string>
 
 <!-- Miscellaneous -->
     <!-- Volume button orientation based on current rotation -->
