--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -44,12 +44,12 @@
     <string name="miscellaneous_section_header">Miscellaneous</string>
 
     <!-- Double Tap Navbar to Sleep -->
-    <string name="double_tap_sleep_nav_bar_title">Navigation bar</string>
-    <string name="double_tap_sleep_nav_bar_summary">Double tap navigation bar to put the device to sleep</string>
+    <string name="double_tap_sleep_nav_bar_title">Double-tap to sleep</string>
+    <string name="double_tap_sleep_nav_bar_summary">Double-tap on the navigation bar to put the device to sleep</string>
 
     <!-- Double Tap Status Bar to Sleep -->
     <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
-    <string name="double_tap_to_sleep_summary">Double-tap on the status bar or top third and bottom shortcut area of the lock screen to turn off the display</string>
+    <string name="double_tap_to_sleep_summary">Double-tap on the status bar to put the device to sleep</string>
 
     <!-- Status Bar Brightness Control -->
     <string name="status_bar_toggle_brightness">Brightness control</string>
