--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -87,4 +87,7 @@
     <!-- Charging vibration -->
     <string name="charging_vibration_title">Charging vibration</string>
 
+    <!-- substratum dashboard tile title -->
+    <string name="substratum_settings_title">Substratum</string>
+
 </resources>
