DUI: Initial N checkin

--- a/res/values/velvet_colors.xml
+++ b/res/values/velvet_colors.xml
@@ -3,5 +3,12 @@
 
     <color name="dashboard_category_title_background">@color/card_background</color>
     <color name="selectable_card_background">@color/card_background</color>
+ 
+    <!-- DUI -->
+    <color name="background_tab_pressed">#1AFFFFFF</color>
+    <color name="material_deep_teal_500">@*android:color/material_deep_teal_500</color>
+    <color name="icon_tint_color">@color/material_deep_teal_500</color>
+    <color name="theme_accent">#ff009688</color>
+    <color name="action_picker_fab_background">@color/theme_accent</color>
 
 </resources>
