--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -54,15 +54,11 @@
         android:key="navigationbar"
         android:title="@string/navigationbar_section_header" >
 
-        <PreferenceScreen
-            android:key="systemui_tuner_navbar"
-            android:title="@string/systemui_tuner_navbar_title"
-            android:summary="@string/systemui_tuner_navbar_summary" >
-            <intent
-                android:action="android.intent.action.MAIN"
-                android:targetPackage="com.android.systemui"
-                android:targetClass="com.android.systemui.tuner.NavBarTunerActivity" />
-        </PreferenceScreen>
+        <Preference
+            android:key="navigation_options"
+            android:fragment="com.android.settings.velvet.fragments.NavbarSettings"
+            android:title="@string/navigationbar_settings_title"
+            android:summary="@string/navigationbar_settings_summary" />
 
    	<com.android.settings.preference.SystemSettingSwitchPreference
             android:key="double_tap_sleep_navbar"
