--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -92,6 +92,21 @@
     <string name="color_and_appearance">Color and appearance</string>
     <string name="tuner_full_importance_settings">Power notification controls</string>
 
+    <!-- Battery Customization -->
+    <string name="statusbar_battery_title">Battery display</string>
+    <string name="statusbar_battery_summary">Set style of status bar battery</string>
+    <string name="battery_style_title">Style</string>
+    <string name="battery_percent_title">Show percent</string>
+    <string name="battery_percent_none">Never</string>
+    <string name="battery_percent_always">Always</string>
+    <string name="battery_percent_expanded">Expanded</string>
+    <string name="statusbar_percent_inside_title">Percent overlay</string>
+    <string name="statusbar_percent_inside_summary">Display percent on top of the the battery image</string>
+    <string name="statusbar_charging_image_title">Charging indicator</string>
+    <string name="statusbar_category_charging_title">Charging</string>
+    <string name="statusbar_charging_image_summary">Display bolt indicator while charging. Hides percent overlay</string>
+    <string name="battery_enable_title">Show battery</string>
+
 <!-- Miscellaneous -->
     <!-- Volume button orientation based on current rotation -->
     <string name="swap_volume_buttons_title">Swap volume rocker orientation</string>
