--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -19,6 +19,12 @@
                 android:targetClass="com.android.systemui.tuner.TunerActivity" />
         </PreferenceScreen>
 
+		<PreferenceScreen
+		    android:key="status_bar_battery"
+		    android:title="@string/statusbar_battery_title"
+		    android:summary="@string/statusbar_battery_summary"
+		    android:fragment="com.android.settings.velvet.StatusbarBatterySettings" />
+
         <com.android.settings.preference.SystemSettingSwitchPreference
             android:key="status_bar_show_battery_percent"
             android:title="@string/status_bar_battery_percent_title"
