--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -20,11 +20,22 @@
         </PreferenceScreen>
 
         <com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="status_bar_show_battery_percent"
+            android:title="@string/status_bar_battery_percent_title"
+            android:summary="@string/status_bar_battery_percent_summary"
+            android:defaultValue="false" />
+
+    	<com.android.settings.preference.SecureSettingSwitchPreference
+            android:key="qs_show_brightness"
+            android:title="@string/show_brightness"
+            android:defaultValue="true" />
+
+        <com.android.settings.preference.SystemSettingSwitchPreference
             android:key="status_bar_brightness_control"
             android:title="@string/status_bar_toggle_brightness"
             android:summary="@string/status_bar_toggle_brightness_summary" />
 
-   	<com.android.settings.preference.SystemSettingSwitchPreference
+   	    <com.android.settings.preference.SystemSettingSwitchPreference
             android:key="double_tap_sleep_gesture"
             android:title="@string/double_tap_to_sleep_title"
             android:summary="@string/double_tap_to_sleep_summary"
@@ -57,6 +68,11 @@
             android:title="@string/double_tap_sleep_nav_bar_title"
             android:summary="@string/double_tap_sleep_nav_bar_summary"
             android:defaultValue="false" />
+
+    <com.android.settings.preference.SecureSettingSwitchPreference
+        android:key="overview_nav_bar_gesture"
+        android:title="@string/overview_nav_bar_gesture"
+        android:summary="@string/overview_nav_bar_gesture_desc" />
     </PreferenceCategory>
 
     <!-- Miscellaneous -->
@@ -64,14 +80,23 @@
         android:key="misc"
         android:title="@string/miscellaneous_section_header" >
 
-        <PreferenceScreen
-            android:key="systemui_tuner_other"
-            android:title="@string/systemui_tuner_other_title" >
-            <intent
+		<PreferenceScreen
+	        android:key="power_notification_controls"
+	        android:title="@string/tuner_full_importance_settings" >
+			<intent
                 android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.systemui"
-                android:targetClass="com.android.systemui.tuner.OtherPrefsActivity" />
-        </PreferenceScreen>
+                android:targetClass="com.android.systemui.tuner.PowerNotificationControlsActivity" />
+		</PreferenceScreen>
+
+		<PreferenceScreen
+		    android:key="color_transform"
+		    android:title="@string/color_and_appearance" >
+			<intent
+                android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.ColorAndAppearanceActivity" />
+		</PreferenceScreen>
 
     </PreferenceCategory>
 
