--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -27,7 +27,8 @@
 
     	<com.android.settings.preference.SecureSettingSwitchPreference
             android:key="qs_show_brightness"
-            android:title="@string/show_brightness"
+            android:title="@string/show_brightness_title"
+            android:summary="@string/show_brightness_summary"
             android:defaultValue="true" />
 
         <com.android.settings.preference.SystemSettingSwitchPreference
