--- a/res/values/velvet_strings.xml
+++ b/res/values/velvet_strings.xml
@@ -125,4 +125,8 @@
     <!-- substratum dashboard tile title -->
     <string name="substratum_settings_title">Substratum</string>
 
+    <!-- Disable QS on secure Lockscreen -->
+    <string name="lockscreen_qs_disabled_title">Quick settings on lock screen</string>
+    <string name="lockscreen_qs_disabled_summary">Disable quick settings tiles on secured lockscreen</string>
+
 </resources>
