--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -85,6 +85,13 @@
             android:summary="@string/fprint_sucess_vib_summary"
             android:defaultValue="true" />
 
+        <com.android.settings.preference.SecureSettingSwitchPreference
+            android:key="notification_title_tint"
+            android:title="@string/notification_tint_title"
+            android:summaryOn="@string/notification_tint_summary_on"
+            android:summaryOff="@string/notification_tint_summary_off"
+            android:defaultValue="true" />
+
 		<PreferenceScreen
 	        android:key="power_notification_controls"
 	        android:title="@string/tuner_full_importance_settings" >
