--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -99,6 +99,12 @@
             android:summaryOff="@string/doze_notification_color_invert_summary_off"
             android:defaultValue="true" />
 
+        <ListPreference
+            android:entries="@array/screenshot_type_entries"
+            android:entryValues="@array/screenshot_type_values"
+            android:key="screenshot_type"
+            android:title="@string/screenshot_type_title" />
+
 		<PreferenceScreen
 	        android:key="power_notification_controls"
 	        android:title="@string/tuner_full_importance_settings" >
