--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,15 +19,11 @@
     <color name="red">#F00</color>
     <color name="blue">#00F</color>
 
-    <color name="material_pixel_blue_light">#ff3e4147</color>
-    <color name="material_pixel_blue_dark">#ff2a2c31</color>
-    <color name="material_pixel_blue_bright">#ff4285f4</color>
-
     <color name="material_empty_color_light">#FFCED7DB</color>
 
     <color name="memory_used">#F00</color>
     <color name="memory_avail">@color/material_empty_color_light</color>
-    <color name="memory_apps_usage">@color/material_pixel_blue_dark</color>
+    <color name="memory_apps_usage">#00796B</color>
     <color name="memory_downloads">#3367D6</color>
     <color name="memory_dcim">#0097A7</color>
     <color name="memory_music">#689F38</color>
@@ -73,16 +69,16 @@
     <color name="fingerprint_indicator_background_resting">#12000000</color>
 
     <color name="running_processes_system_ram">#ff384248</color>
-    <color name="running_processes_apps_ram">@color/material_pixel_blue_light</color>
+    <color name="running_processes_apps_ram">#ff009587</color>
     <color name="running_processes_free_ram">#ffced7db</color>
 
     <color name="card_background">#ffffffff</color>
 
     <color name="switchbar_background_color">#ff37474f</color>
-    <color name="switch_accent_color">@color/material_pixel_blue_bright</color>
+    <color name="switch_accent_color">#ff7fcac3</color>
 
     <color name="wifi_divider">#ffe0e0e0</color>
-    <color name="sim_noitification">@color/material_pixel_blue_light</color>
+    <color name="sim_noitification">@*android:color/material_deep_teal_500</color>
 
     <color name="warning">#ff5621</color>
     <color name="confirm_device_credential_dark_background">#263238</color>
@@ -93,7 +89,7 @@
 
     <drawable name="fp_enrollment_header_landscape">#009688</drawable>
 
-    <color name="memory_normal">@color/material_pixel_blue_light</color>
+    <color name="memory_normal">#ff009587</color>
     <color name="memory_moderate">#ffF3B300</color>
     <color name="memory_low">#ffff9700</color>
     <color name="memory_critical">#ffff5621</color>
@@ -103,9 +99,9 @@
     <color name="zen_rule_name_warning">@color/system_warning_color</color>
 
     <!-- Accent color that matches the settings launcher icon -->
-    <color name="icon_accent">@color/material_pixel_blue_bright</color>
+    <color name="icon_accent">#ffabffec</color>
 
-    <color name="summary_default_start">@color/material_pixel_blue_light</color>
+    <color name="summary_default_start">#ff009587</color>
     <color name="summary_default_end">#ffced7db</color>
 
     <color name="importance_icon_tint">#8a000000</color>
@@ -129,7 +125,7 @@
 
     <color name="seek_bar_preference_preview_text">#fff</color>
 
-    <color name="importance_slider_color">@color/material_pixel_blue_light</color>
+    <color name="importance_slider_color">@*android:color/material_deep_teal_500</color>
     <color name="importance_disabled_slider_color">@*android:color/material_grey_300</color>
     <color name="importance_secondary_slider_color">#858383</color>
 
