--- a/res/values/projekt_colors.xml
+++ b/res/values/projekt_colors.xml
@@ -18,10 +18,10 @@
 <resources>
 
     <!-- Storage Summary Title -->
-    <color name="storage_summary_title_color">@color/material_pixel_blue_dark</color>
+    <color name="storage_summary_title_color">#ff607d8b</color>
 
     <!-- Condition card colors -->
-    <color name="condition_card_background_color">@color/material_pixel_blue_bright</color>
+    <color name="condition_card_background_color">@*android:color/material_deep_teal_500</color>
     <color name="condition_card_icon_color">@*android:color/primary_text_material_dark</color>
     <color name="condition_card_title_text_color">@*android:color/primary_text_material_dark</color>
     <color name="condition_card_expander_color">@*android:color/primary_text_material_dark</color>
