--- a/res/values/velvet_colors.xml
+++ b/res/values/velvet_colors.xml
@@ -6,9 +6,9 @@
  
     <!-- DUI -->
     <color name="background_tab_pressed">#1AFFFFFF</color>
-    <color name="material_deep_teal_500">@color/material_pixel_blue_light</color>
+    <color name="material_deep_teal_500">@*android:color/material_deep_teal_500</color>
     <color name="icon_tint_color">@color/material_deep_teal_500</color>
-    <color name="theme_accent">@color/material_pixel_blue_bright</color>
+    <color name="theme_accent">#ff009688</color>
     <color name="action_picker_fab_background">@color/theme_accent</color>
 
 </resources>
