--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -37,6 +37,14 @@
             android:summary="@string/show_brightness_summary"
             android:defaultValue="true" />
 
+        <com.android.settings.preference.CustomSeekBarPreference
+            android:key="qs_layout_columns"
+            android:title="@string/qs_columns_title"
+            android:max="7"
+            settings:min="1"
+            settings:units=""
+            android:persistent="false" />
+
         <com.android.settings.preference.SystemSettingSwitchPreference
             android:key="status_bar_brightness_control"
             android:title="@string/status_bar_toggle_brightness"
