--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -31,20 +31,6 @@
 		    android:summary="@string/statusbar_battery_summary"
 		    android:fragment="com.android.settings.velvet.StatusbarBatterySettings" />
 
-    	<com.android.settings.preference.SecureSettingSwitchPreference
-            android:key="qs_show_brightness"
-            android:title="@string/show_brightness_title"
-            android:summary="@string/show_brightness_summary"
-            android:defaultValue="true" />
-
-        <com.android.settings.preference.CustomSeekBarPreference
-            android:key="qs_layout_columns"
-            android:title="@string/qs_columns_title"
-            android:max="7"
-            settings:min="1"
-            settings:units=""
-            android:persistent="false" />
-
         <com.android.settings.preference.SystemSettingSwitchPreference
             android:key="status_bar_brightness_control"
             android:title="@string/status_bar_toggle_brightness"
@@ -67,6 +53,27 @@
             android:fragment="com.android.settings.NetworkTraffic"
             android:summary="@string/network_traffic_summary"
             android:title="@string/network_traffic_title" />
+    </PreferenceCategory>
+
+    <!-- Notification drawer -->
+    <PreferenceCategory
+        android:key="notif_drawer"
+        android:title="@string/notifdrawer_section_header" >
+
+        <com.android.settings.preference.SecureSettingSwitchPreference
+            android:key="qs_show_brightness"
+            android:title="@string/show_brightness_title"
+            android:summary="@string/show_brightness_summary"
+            android:defaultValue="true" />
+
+        <com.android.settings.preference.CustomSeekBarPreference
+            android:key="qs_layout_columns"
+            android:title="@string/qs_columns_title"
+            android:max="7"
+            settings:min="1"
+            settings:units=""
+            android:persistent="false" />
+
     </PreferenceCategory>
 
     <!-- Navigation bar -->
