--- a/res/values/velvet_arrays.xml
+++ b/res/values/velvet_arrays.xml
@@ -250,5 +250,18 @@
         <item>1</item>
     </string-array>
 
+    <!-- Quick settings column  -->
+    <string-array name="qs_columns_entries">
+        <item>@string/qs_columns_three</item>
+        <item>@string/qs_columns_four</item>
+        <item>@string/qs_columns_five</item>
+    </string-array>
+
+    <string-array name="qs_columns_values" translatable="false">
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+
 </resources>
 
