--- a/res/values/velvet_arrays.xml
+++ b/res/values/velvet_arrays.xml
@@ -241,4 +241,17 @@
         <item>5</item>
     </string-array>
 
+    <!-- Status bar battery text options  -->
+    <string-array name="status_bar_battery_percentage_entries">
+        <item>@string/status_bar_battery_percentage_hidden</item>
+        <item>@string/status_bar_battery_percentage_inside</item>
+        <item>@string/status_bar_battery_percentage_outside</item>
+    </string-array>
+
+    <string-array name="status_bar_battery_percentage_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
