--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -25,6 +25,12 @@
             android:title="@string/clock_settings_title"
             android:summary="@string/clock_settings_summary" />
 
+        <ListPreference
+            android:entries="@array/status_bar_battery_percentage_entries"
+            android:entryValues="@array/status_bar_battery_percentage_values"
+            android:key="status_bar_battery_percentage"
+            android:title="@string/status_bar_battery_percentage_title" />
+
         <com.android.settings.preference.SystemSettingSwitchPreference
             android:key="status_bar_brightness_control"
             android:title="@string/status_bar_toggle_brightness"
