--- a/res/xml/velvet_customization_settings.xml
+++ b/res/xml/velvet_customization_settings.xml
@@ -94,6 +94,12 @@
             android:summary="@string/fprint_sucess_vib_summary"
             android:defaultValue="true" />
 
+        <com.android.settings.preference.SecureSettingSwitchPreference
+            android:key="one_handed_mode_ui"
+            android:title="@string/one_handed_mode_title"
+            android:summary="@string/one_handed_mode_summary"
+            android:defaultValue="true" />
+
         <PreferenceScreen
             android:key="systemui_tuner_other"
             android:title="@string/systemui_tuner_other_title" >
